--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         ]
     },
     "devDependencies": {
-        "typescript": "^4.7.4"
-    }
+    "typescript": "^4.7.4"
+  },
+  "description": "`npm start`",
+  "main": "index.js"
 }
